--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://img.icons8.com/?size=512&id=2BeIdZyy0fFG&format=png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title class="">Vite + React</title>
+    <title class="">Reviews Portal</title>
   </head>
   <body>
     <div id="root"></div>
